--- a/data/tabular/sr_atad5_tox21/meta.yaml
+++ b/data/tabular/sr_atad5_tox21/meta.yaml
@@ -53,7 +53,7 @@ bibtex:
       journal = {Frontiers in Environmental Science}
 templates:
     - The molecule with the {SMILES__description} {#representation of |!}{SMILES#} is {toxicity_SR-ATAD5#not &NULL}{toxicity_SR-ATAD5__names__adjective}.
-    - The molecule with the {SMILES__description} {#representation of |!}{SMILES#} {#shows|exhibits|displays!} {toxicity_SR-ATAD5#no &NULL}{toxicity_SR-ATAD5__names__gerund}.
+    - The molecule with the {SMILES__description} {#representation of |!}{SMILES#} is {toxicity_SR-ATAD5#not &NULL}{toxicity_SR-ATAD5__names__gerund}.
     - Based on the {SMILES__description} {#representation |!}{SMILES#}, the molecule has {toxicity_SR-ATAD5#no &NULL}{toxicity_SR-ATAD5__names__noun} {#properties|characteristics|features!}.
     - The {SMILES__description} {SMILES#} {#represents|is from!} a molecule that is {toxicity_SR-ATAD5#not &NULL}identified as {toxicity_SR-ATAD5__names__adjective}.
     - The {#molecule |!}{SMILES__description} {SMILES#} is {toxicity_SR-ATAD5#not &NULL}{toxicity_SR-ATAD5__names__adjective}.
