--- a/data/tabular/sr_p53_tox21/meta.yaml
+++ b/data/tabular/sr_p53_tox21/meta.yaml
@@ -52,8 +52,8 @@ bibtex:
       and Stress Response Pathways As Mediated by Exposure to Environmental Toxicants and Drugs},
       journal = {Frontiers in Environmental Science}
 templates:
-    - The molecule with the {SMILES__description} {#representation of |!}{SMILES#} is {toxicity_SR-p53#not &NULL}{toxicity_SR-p53__names__adjective}.The
-      molecule with the {SMILES__description} {#representation of |!}{SMILES#} {#shows|exhibits|displays!} {toxicity_SR-p53#no &NULL}{toxicity_SR-p53__names__gerund}.
+    - The molecule with the {SMILES__description} {#representation of |!}{SMILES#} is {toxicity_SR-p53#not &NULL}{toxicity_SR-p53__names__adjective}.
+    - The molecule with the {SMILES__description} {#representation of |!}{SMILES#} is {toxicity_SR-p53#not &NULL}{toxicity_SR-p53__names__gerund}.
     - Based on the {SMILES__description} {#representation |!}{SMILES#}, the molecule has {toxicity_SR-p53#no &NULL}{toxicity_SR-p53__names__noun} {#properties|characteristics|features!}.
     - The {SMILES__description} {SMILES#} {#represents|is from!} a molecule that is {toxicity_SR-p53#not &NULL}identified as {toxicity_SR-p53__names__adjective}.
     - The {#molecule |!}{SMILES__description} {SMILES#} is {toxicity_SR-p53#not &NULL}{toxicity_SR-p53__names__adjective}.
