--- a/data/tabular/potassium_ion_channel_kir2_1_butkiewicz/meta.yaml
+++ b/data/tabular/potassium_ion_channel_kir2_1_butkiewicz/meta.yaml
@@ -14,10 +14,10 @@ targets:
       units:
       type: boolean
       names:
-          - verb: is blocking potassium ion channel activity
-          - verb: blocks potassium ion channel activity
-          - verb: inhibts the Inward-Rectifying Potassium Ion Channel Kir2.1
+          - gerund: blocking potassium ion channel activity
           - noun: blocker of potassium ion channel activity
+          - adjective: effective for blocking potassium ion channel activity
+          - adjective: reliable for potassium ion channel blocking
       pubchem_aids:
           - 1672
           - 2032
@@ -92,3 +92,87 @@ bibtex:
       title = {{H}igh-{T}hroughput {S}creening {A}ssay {D}atasets
       from the {P}ub{C}hem {D}atabase}},
       journal = {Chemical Science}}
+templates:
+    - The molecule with the {SMILES__description} {#representation of |!}{SMILES#} is {activity_potassium_ion_channel#not &NULL}{activity_potassium_ion_channel__names__noun}.
+    - The molecule with the {SMILES__description} {#representation of |!}{SMILES#} {#shows|exhibits|displays!} {activity_potassium_ion_channel#no &NULL}{activity_potassium_ion_channel__names__gerund}.
+    - Based on the {SMILES__description} {#representation |!}{SMILES#}, the molecule has {activity_potassium_ion_channel#no &NULL}{activity_potassium_ion_channel__names__adjective}
+      {#properties|characteristics|features!}.
+    - The {SMILES__description} {SMILES#} {#represents|is from!} a molecule that is {activity_potassium_ion_channel#not &NULL}identified as {activity_potassium_ion_channel__names__adjective}.
+    - The {#molecule |!}{SMILES__description} {SMILES#} is {activity_potassium_ion_channel#not &NULL}{activity_potassium_ion_channel__names__adjective}.
+    - |-
+      Task: Please classify a molecule based on the description.
+      Description: A molecule that is {activity_potassium_ion_channel__names__adjective}.
+      {#Molecule |!}{SMILES__description}: {SMILES#}
+      Constraint: Even if you are {#uncertain|not sure!}, you must pick either "True" or "False" without using any {#other|additional|extra!} words.
+      Result: {activity_potassium_ion_channel#False&True}
+    - |-
+      Task: Please classify a molecule based on the description.
+      Description: A molecule that is {activity_potassium_ion_channel__names__adjective}.
+      {#Molecule |!}{SMILES__description}: {SMILES#}
+      Constraint: Answer the question in a {#full|complete!} sentence.
+      Result: This molecule is {activity_potassium_ion_channel#not &NULL}{activity_potassium_ion_channel__names__adjective}.
+    - |-
+      Task: Please {#give me|create|generate!} a {#molecule |!}{SMILES__description} based on the {#text |!}description{# below|!}.
+      Description: A molecule that is {activity_potassium_ion_channel__names__adjective}.
+      Result: {SMILES#}
+    - |-
+      User: Can you {#tell me|figure out|estimate!} if the molecule with the {SMILES__description} {SMILES#} is {activity_potassium_ion_channel__names__adjective}?
+      Assistant: {activity_potassium_ion_channel#No&Yes}, this molecule is {activity_potassium_ion_channel#not &NULL}{activity_potassium_ion_channel__names__adjective}.
+    - |-
+      User: Is the molecule with the {SMILES__description} {SMILES#} {activity_potassium_ion_channel__names__adjective}?
+      Assistant: {activity_potassium_ion_channel#No&Yes}, it is {activity_potassium_ion_channel#not &NULL}{activity_potassium_ion_channel__names__adjective}.
+    - |-
+      User: Can you {#give me|create|generate!} the {SMILES__description} of a molecule that is {activity_potassium_ion_channel#not &NULL}{activity_potassium_ion_channel__names__adjective}?
+      Assistant: {#Yes|Of course|Sure|Yes, I'm happy to help!}, here you go: {SMILES#}
+    - |-
+      User: I'm {#searching|looking!} for the {SMILES__description} of a molecule that is {activity_potassium_ion_channel#not &NULL}{activity_potassium_ion_channel__names__adjective}?
+      Assistant: This is a molecule that is {activity_potassium_ion_channel#not &NULL}{activity_potassium_ion_channel__names__adjective}: {SMILES#}
+    - |-
+      User: I want to {#come up with|create|generate!} a {#molecule |!}{SMILES__description}.
+      Assistant: This sounds {#very exciting. |very interesting. | very curious. !}Should I consider any {#constraints|specific points!} for the {#generation|creation!}?
+      User: Yes, please. The molecule should {activity_potassium_ion_channel#not &NULL}be {activity_potassium_ion_channel__names__adjective}.
+      Assistant: {#Ok|Got it!},{# here you go,|!} this {SMILES__description} is {activity_potassium_ion_channel#not &NULL}{activity_potassium_ion_channel__names__adjective}: {SMILES#}
+    - |-
+      User: I want to {#come up with|create|generate!} a {#molecule |!}{SMILES__description}.
+      Assistant: {#This sounds very exciting. |This sounds very interesting. !}Should it be a special {#molecule|one!}?
+      User: Yes, the molecule should {activity_potassium_ion_channel#not &NULL}be {activity_potassium_ion_channel__names__adjective}.
+      Assistant: {#Understood|Got it|Ok!}, this {SMILES__description} is {activity_potassium_ion_channel#not &NULL}{activity_potassium_ion_channel__names__adjective}: {SMILES#}
+    - Is the {SMILES__description} {SMILES#} {activity_potassium_ion_channel__names__adjective}:<EOI> {activity_potassium_ion_channel#yes&no}
+    - |-
+      Task: Please classify a molecule based on the description.
+      Description: A molecule that is {activity_potassium_ion_channel__names__adjective}.
+      {#Molecule |!}{SMILES__description}: {SMILES#}
+      Constraint: Even if you are {#uncertain|not sure!}, you must pick either "True" or "False" without using any {#other|additional!} words.
+      Result:<EOI> {activity_potassium_ion_channel#False&True}
+    - |-
+      Task: Please {#give me|create|generate!} a {#molecule |!}{SMILES__description} based on the {#text |!}description{# below|!}.
+      Description: A molecule that is {activity_potassium_ion_channel__names__adjective}.
+      Result:<EOI> {SMILES#}
+    - |-
+      Task: Please answer the multiple choice question.
+      Question: Is the molecule with the {SMILES__description} {#representation of |!}{SMILES#} {activity_potassium_ion_channel__names__adjective}?
+      Constraint: Even if you are {#uncertain|not sure!}, you must pick either {%multiple_choice_enum%2%aA1} without using any {#other|additional!} words.
+      Options:
+      {activity_potassium_ion_channel%}
+      Answer: {%multiple_choice_result}
+    - |-
+      Task: Please answer the multiple choice question.
+      Question: Is the molecule with the {SMILES__description} {#representation of |!}{SMILES#} {activity_potassium_ion_channel__names__adjective}?
+      Constraint: Even if you are {#uncertain|not sure!}, you must pick either {%multiple_choice_enum%2%aA1} without using any {#other|additional!} words.
+      Options:
+      {activity_potassium_ion_channel%}
+      Answer:<EOI> {%multiple_choice_result}
+    - |-
+      Task: Please answer the multiple choice question.
+      Question: Which molecules are {activity_potassium_ion_channel#not &NULL}{activity_potassium_ion_channel__names__adjective}?
+      Constraint: You must select none, one or more options from {%multiple_choice_enum%2-5%aA1} without using any {#other|additional!} words.
+      Options:
+      {SMILES%activity_potassium_ion_channel%}
+      Answer: {%multiple_choice_result}
+    - |-
+      Task: Please answer the multiple choice question.
+      Question: Which molecules are {activity_potassium_ion_channel#not &NULL}{activity_potassium_ion_channel__names__adjective}?
+      Constraint: You must select none, one or more options from {%multiple_choice_enum%2-5%aA1} without using any {#other|additional!} words.
+      Options:
+      {SMILES%activity_potassium_ion_channel%}
+      Answer:<EOI> {%multiple_choice_result}
