--- a/data/tabular/clintox/meta.yaml
+++ b/data/tabular/clintox/meta.yaml
@@ -51,7 +51,7 @@ bibtex:
 templates:
     - The molecule with the {SMILES__description} {#representation of |!}{SMILES#} {#shows|exhibits|displays!} {clinical_toxicity#no &NULL}{clinical_toxicity__names__noun}.
     - Based on the {SMILES__description} {#representation |!}{SMILES#}, the molecule has {clinical_toxicity#no &NULL}{clinical_toxicity__names__adjective}
-      {#properties|characteristics|features!}.
+      {#properties|characteristics|features|traits!}.
     - The {SMILES__description} {SMILES#} {#represents|is from!} a molecule that is {clinical_toxicity#not &NULL}identified as {clinical_toxicity__names__adjective}.
     - The {#molecule |!}{SMILES__description} {SMILES#} is {clinical_toxicity#not &NULL}{clinical_toxicity__names__adjective}.
     - |-
