--- a/data/tabular/sarscov2_vitro_touret/meta.yaml
+++ b/data/tabular/sarscov2_vitro_touret/meta.yaml
@@ -15,9 +15,9 @@ targets:
           - adjective: active against the Corona virus
           - adjective: active against SARSCoV2
           - adjective: active against COVID19
-          - gerund: positively acting against the Corona virus
-          - gerund: positively acting against SARSCoV2
-          - gerund: positively acting against COVID19
+          - gerund: fighting the Corona virus
+          - gerund: fighting against SARSCoV2
+          - gerund: fighting against COVID19
 benchmarks:
     - name: TDC
       link: https://tdcommons.ai/
@@ -50,7 +50,7 @@ bibtex:
       journal = {Scientific Reports}
 templates:
     - The molecule with the {SMILES__description} {#representation of |!}{SMILES#} {#shows|exhibits|displays!} {activity_SARSCoV2#no &NULL}{activity_SARSCoV2__names__noun}.
-    - Based on the {SMILES__description} {#representation |!}{SMILES#}, the molecule is {activity_SARSCoV2#not &NULL}{activity_SARSCoV2__names__gerund}.
+    - Based on the {SMILES__description} {#representation |!}{SMILES#}, the molecule is {activity_SARSCoV2#effectively &ineffectevely}{activity_SARSCoV2__names__gerund}.
     - The {SMILES__description} {SMILES#} {#represents|is from!} a molecule that {#shows|exhibits|displays!} {activity_SARSCoV2#no &NULL}{activity_SARSCoV2__names__noun}.
     - The {#molecule |!}{SMILES__description} {SMILES#} is {activity_SARSCoV2#not &NULL}{activity_SARSCoV2__names__gerund}.
     - |-
