--- a/data/tabular/skin_reaction/meta.yaml
+++ b/data/tabular/skin_reaction/meta.yaml
@@ -15,10 +15,9 @@ targets:
           - noun: skin sensitization
           - noun: agent induced skin reaction
           - noun: drug induced skin immune reaction
-          - verb: causes a skin reaction
-          - verb: causes a skin sensitization
-          - verb: causes a drug induced skin immune reaction
-          - adjective: reactive in contact with the skin
+          - verb: cause a skin reaction
+          - verb: cause a skin sensitization
+          - verb: cause a drug induced skin immune reaction
           - gerund: causing a skin reaction
       uris:
           - http://purl.bioontology.org/ontology/MEDDRA/10040914
@@ -62,11 +61,10 @@ bibtex:
       and their application to identify potentially hazardous compounds},
       journal = {Toxicology and Applied Pharmacology}
 templates:
-    - The {#molecule |!}{SMILES__description} {SMILES#} causes {skin_reaction#no &NULL}reaction with the skin.
-    - The molecule with the {SMILES__description} {#representation of |!}{SMILES#} is not {skin_reaction#no &NULL}{skin_reaction__names__adjective}.
-    - Based on the {SMILES__description} {#representation |!}{SMILES#}, there is {skin_reaction#no &NULL}reaction in contact with the skin.
-    - The {SMILES__description} {SMILES#} {#represents|is from!} a molecule that is {skin_reaction#not &NULL}identified as {skin_reaction__names__adjective}.
-    - The {#molecule |!}{SMILES__description} {SMILES#} is {skin_reaction#not &NULL}{skin_reaction__names__adjective}.
+    - The {#molecule |!}{SMILES__description} {SMILES#} causes {skin_reaction#no &NULL}{skin_reaction__names__noun}.
+    - The molecule with the {SMILES__description} {#representation of |!}{SMILES#} is {skin_reaction#not &NULL}{skin_reaction__names__gerund}.
+    - Based on the {SMILES__description} {#representation |!}{SMILES#}, there is {skin_reaction#no &NULL}{skin_reaction__names__noun}.
+    - The {#molecule |!}{SMILES__description} {SMILES#} does {skin_reaction#not &NULL}{skin_reaction__names__verb}.
     - |-
       Task: Please classify a molecule based on the description.
       Description: A molecule that is {skin_reaction__names__adjective}.
