--- a/data/tabular/ames_mutagenicity/meta.yaml
+++ b/data/tabular/ames_mutagenicity/meta.yaml
@@ -95,7 +95,7 @@ templates:
       Assistant: {#This sounds very exciting. |This sounds very interesting. !}Should it be a special {#molecule|one!}?
       User: Yes, the molecule should {mutagenic#not &NULL}be {mutagenic__names__adjective}.
       Assistant: {#Understood|Got it|Ok!}, this {SMILES__description} is {mutagenic#not &NULL}{mutagenic__names__adjective}: {SMILES#}
-    - Is the {SMILES__description} {SMILES#} {mutagenic__names__adjective}:<EOI> {mutagenic#yes&no}
+    - Is the {SMILES__description} {SMILES#} {mutagenic__names__adjective}:<EOI> {mutagenic#no&yes}
     - |-
       Task: Please classify a molecule based on the description.
       Description: A molecule that is {mutagenic__names__adjective}.
