--- a/data/tabular/cyp2d6_substrate_carbonmangels/meta.yaml
+++ b/data/tabular/cyp2d6_substrate_carbonmangels/meta.yaml
@@ -115,7 +115,7 @@ templates:
       Assistant: {#This sounds very exciting. |This sounds very interesting. !}Should it be a special {#molecule|one!}?
       User: Yes, the molecule should {CYP2D6_Substrate#not &NULL}be a {CYP2D6_Substrate__names__noun}.
       Assistant: {#Understood|Got it|Ok!}, this {SMILES__description} is {CYP2D6_Substrate#not &NULL}a {CYP2D6_Substrate__names__noun}: {SMILES#}
-    - Is the {SMILES__description} {SMILES#} a {CYP2D6_Substrate__names__noun}:<EOI> {CYP2D6_Substrate#yes&no}
+    - Is the {SMILES__description} {SMILES#} a {CYP2D6_Substrate__names__noun}:<EOI> {CYP2D6_Substrate#no&yes}
     - |-
       Task: Please classify a molecule based on the description.
       Description: A molecule that is a {CYP2D6_Substrate__names__noun}.
