--- a/data/tabular/cyp3a4_substrate_carbonmangels/meta.yaml
+++ b/data/tabular/cyp3a4_substrate_carbonmangels/meta.yaml
@@ -116,7 +116,7 @@ templates:
       Assistant: {#This sounds very exciting. |This sounds very interesting. !}Should it be a special {#molecule|one!}?
       User: Yes, the molecule should {CYP3A4_Substrate#not &NULL}be a {CYP3A4_Substrate__names__noun}.
       Assistant: {#Understood|Got it|Ok!}, this {SMILES__description} is {CYP3A4_Substrate#not &NULL}a {CYP3A4_Substrate__names__noun}: {SMILES#}
-    - Is the {SMILES__description} {SMILES#} a {CYP3A4_Substrate__names__noun}:<EOI> {CYP3A4_Substrate#yes&no}
+    - Is the {SMILES__description} {SMILES#} a {CYP3A4_Substrate__names__noun}:<EOI> {CYP3A4_Substrate#no&yes}
     - |-
       Task: Please classify a molecule based on the description.
       Description: A molecule that is a {CYP3A4_Substrate__names__noun}.
