--- a/data/tabular/cyp_p450_2d6_inhibition_veith_et_al/meta.yaml
+++ b/data/tabular/cyp_p450_2d6_inhibition_veith_et_al/meta.yaml
@@ -95,7 +95,7 @@ templates:
       Assistant: {#This sounds very exciting. |This sounds very interesting. !}Should it be a special {#molecule|one!}?
       User: Yes, the molecule should {CYP2D6_inhibition#not &NULL}be {CYP2D6_inhibition__names__gerund}.
       Assistant: {#Understood|Got it|Ok!}, this {SMILES__description} is {CYP2D6_inhibition#not &NULL}{CYP2D6_inhibition__names__gerund}: {SMILES#}
-    - Is the {SMILES__description} {SMILES#} {CYP2D6_inhibition__names__gerund}:<EOI> {CYP2D6_inhibition#yes&no}
+    - Is the {SMILES__description} {SMILES#} {CYP2D6_inhibition__names__gerund}:<EOI> {CYP2D6_inhibition#no&yes}
     - |-
       Task: Please classify a molecule based on the description.
       Description: A molecule that is {CYP2D6_inhibition__names__gerund}.
