--- a/data/tabular/cyp_p450_3a4_inhibition_veith_et_al/meta.yaml
+++ b/data/tabular/cyp_p450_3a4_inhibition_veith_et_al/meta.yaml
@@ -96,7 +96,7 @@ templates:
       Assistant: {#This sounds very exciting. |This sounds very interesting. !}Should it be a special {#molecule|one!}?
       User: Yes, the molecule should {CYP3A4_inhibition#not &NULL}be {CYP3A4_inhibition__names__gerund}.
       Assistant: {#Understood|Got it|Ok!}, this {SMILES__description} is {CYP3A4_inhibition#not &NULL}{CYP3A4_inhibition__names__gerund}: {SMILES#}
-    - Is the {SMILES__description} {SMILES#} {CYP3A4_inhibition__names__gerund}:<EOI> {CYP3A4_inhibition#yes&no}
+    - Is the {SMILES__description} {SMILES#} {CYP3A4_inhibition__names__gerund}:<EOI> {CYP3A4_inhibition#no&yes}
     - |-
       Task: Please classify a molecule based on the description.
       Description: A molecule that is {CYP3A4_inhibition__names__gerund}.
