--- a/data/tabular/herg_central_inhib/meta.yaml
+++ b/data/tabular/herg_central_inhib/meta.yaml
@@ -85,7 +85,7 @@ templates:
       Assistant: {#This sounds very exciting. |This sounds very interesting. !}Should it be a special {#molecule|one!}?
       User: Yes, the molecule should {herg_inhib#not &NULL}be a {herg_inhib__names__noun}.
       Assistant: {#Understood|Got it|Ok!}, this {SMILES__description} is {herg_inhib#not &NULL}a {herg_inhib__names__noun}: {SMILES#}
-    - Is the {SMILES__description} {SMILES#} a {herg_inhib__names__noun}:<EOI> {herg_inhib#yes&no}
+    - Is the {SMILES__description} {SMILES#} a {herg_inhib__names__noun}:<EOI> {herg_inhib#no&yes}
     - |-
       Task: Please classify a molecule based on the description.
       Description: A molecule that is a {herg_inhib__names__noun}.
